// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Pika"
      key="0"
    />
    <GifGrid
      category="dragon"
      key="1"
    />
  </ol>
</Fragment>
`;

exports[`Prueba en GifExpertApp Debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
